cmake_minimum_required(VERSION 3.16)
project(Nuray_Algo)

set(CMAKE_CXX_STANDARD 14)

add_executable(Nuray_Algo main.cpp algorithmA.cpp algorithmB.cpp algorithmC.cpp algorithmD.cpp algorithmE.cpp algorithmF.cpp algorithmG.cpp algorithmH.cpp algorithmI.cpp helpers.cpp functions.h testerQ3.cpp testerQ4.cpp)